--- a/Документация подсистемы.md
+++ b/Документация подсистемы.md
@@ -102,14 +102,14 @@
 **Функциональные требования:**
 1. Система должна предоставлять возможность регистрации новых продавцов через заполнение формы с обязательными полями.
 2. Система должна поддерживать авторизацию через email и пароль, а также двухфакторную аутентификацию.
-3. Продавец должен иметь возможность создавать, редактировать и удалять карточки товаров, указывая название, описание, цену, категорию, фотографии и характеристики.
+3. Система должна позволять пользователям создавать, редактировать и удалять карточки товаров.
 4. Система должна предоставлять возможность обновлять количество товаров на складе.
 5. Система должна отправлять уведомление продавцу при достижении минимального остатка.
 6. Система должна автоматически уведомлять продавца о новых заказах.
-7. Продавец должен иметь возможность изменять статус заказа (например, "В обработке", "Отправлен", "Доставлен").
+7. Система должна автоматически измянять статус заказа.
 8. Система должна поддерживать автоматическое начисление средств на счет продавца после успешной доставки заказа.
 9. Система должна предоставлять продавцам возможность отвечать на вопросы покупателей через встроенный чат или систему тикетов.
-10. Продавец должен иметь доступ к отзывам и рейтингам, оставленным покупателями.
+10. Система должна предоставить продавцу возможность просматривать отзывы и рейтинг, оставленные покупателями.
 
 **Нефункциональные требования:**
 1. Система должна обрабатывать до 100 000 одновременных запросов от продавцов без потери производительности.
