--- a/Документация подсистемы.md
+++ b/Документация подсистемы.md
@@ -124,7 +124,7 @@
 10. Система должна поддерживать мобильные устройства (адаптивный дизайн или мобильное приложение).
 ## Моделирование бизнес-процесса
 Диаграмма бизнес-процесса "Обработка заказов" в нотации BPMN
-![бизнес-процесс](https://github.com/nttorry/---/blob/9370b0d8283d1611eb21be6b81dbed5fe44b2888/BPMN%20diagram%20%D0%9E%D0%B1%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D0%BA%D0%B0%20%D0%B7%D0%B0%D0%BA%D0%B0%D0%B7%D0%B0.png)
+![бизнес-процесс](https://github.com/nttorry/---/blob/f50532447364c24c6c817521b23065b9ed223297/%D0%91%D0%9F%D0%9C%D0%9D%202.png)
 ## Структура базы данных подсистемы
 Описание таблиц: 
 **Продавец (Seller)**
